# packed-anagram-hash

./: .gitignore  README.md  pyproject.toml
.deck/: ai.yml  config.yml
src/packed_anagram_hash/: __init__.py  hasher.py
tests/: test_hasher.py
