[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packed-anagram-hash"
version = "1.0.1"
description = "Constant-time anagram hashing using packed bit-width representation"
readme = "README.md"
license = "CC0-1.0"
authors = [
    { name = "Nicholas David Brown", email = "worldbridgerstudios@gmail.com" }
]
keywords = [
    "anagram",
    "hashing",
    "algorithm",
    "string-matching",
    "nlp",
    "computational-linguistics",
    "bit-manipulation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"

[project.urls]
Documentation = "https://github.com/worldbridgerstudios/packed-anagram-hash#readme"
Paper = "https://doi.org/10.5281/zenodo.18167975"
Repository = "https://github.com/worldbridgerstudios/packed-anagram-hash"

[tool.hatch.build.targets.wheel]
packages = ["src/packed_anagram_hash"]
